--- a/index.html
+++ b/index.html
@@ -1,46 +1,44 @@
-<!DOCTYPE html>
-
-<html lang="en-US">
-
+<!doctype html>
+<html lang="en" class="no-js">
 <head>
 	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 
-	<link rel="stylesheet" type="text/css" href="css/main.css">
+	<link href='http://fonts.googleapis.com/css?family=Ubuntu:400,700' rel='stylesheet' type='text/css'>
 
-	<title>AML</title>
+	<link rel="stylesheet" href="css/reset.css"> <!-- CSS reset -->
+	<link rel="stylesheet" href="css/style.css"> <!-- Resource style -->
+	<script src="js/modernizr.js"></script> <!-- Modernizr -->
+
+	<title>Full page intro and navigation</title>
 </head>
-
 <body>
+<main id="cd-main-content">
+	<section id="cd-intro">
+		<h1>Full Page Intro &amp; Navigation</h1>
 
+		<header class="cd-header">
+			<div id="cd-logo"><a href="#0"><img src="img/cd-logo.svg" alt="Logo"></a></div>
+			<a class="cd-menu-trigger" href="#main-nav">Menu<span></span></a>
+		</header>
+		<div class="cd-blurred-bg"></div>
+	</section> <!-- cd-intro -->
+</main>
 
-	<main id="cd-main-content">
-		<section id="cd-intro">
-			<h1>Full Page Intro &amp; Navigation</h1>
+<div class="cd-shadow-layer"></div>
 
-			<header class="cd-header">
-				<div id="cd-logo"><a href="#0"><img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/148866/cd-logo_2.svg" alt="Logo"></a></div>
-				<a class="cd-menu-trigger" href="#main-nav">Menu<span></span></a>
-			</header>
-			<div class="cd-blurred-bg"></div>
-		</section>  cd-intro
-	</main>
+<nav id="main-nav">
+	<ul>
+		<li><a href="#0"><span>Tour</span></a></li>
+		<li><a href="#0"><span>Pricing</span></a></li>
+		<li><a href="#0"><span>Labs</span></a></li>
+		<li><a href="#0"><span>About</span></a></li>
+		<li><a href="#0"><span>Contact us</span></a></li>
+	</ul>
+	<a href="#0" class="cd-close-menu">Close<span></span></a>
+</nav>
 
-	<div class="cd-shadow-layer"></div>
-
-	<nav id="main-nav">
-		<ul>
-			<li><a href="#0"><span>Tour</span></a></li>
-			<li><a href="#0"><span>Pricing</span></a></li>
-			<li><a href="#0"><span>Labs</span></a></li>
-			<li><a href="#0"><span>About</span></a></li>
-			<li><a href="#0"><span>Contact us</span></a></li>
-		</ul>
-		<a href="#0" class="cd-close-menu">Close<span></span></a>
-	</nav>
+<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+<script src="js/main.js"></script> <!-- Resource jQuery -->
 </body>
-	<script src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
-	<script src="js/main.js"></script>
-
 </html>
-
-
