--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
 	<link rel="stylesheet" href="css/main.css"> <!-- Resource style -->
 	<script src="js/modernizr.js"></script> <!-- Modernizr -->
 
-	<title>Full page intro and navigation</title>
+	<title>AML</title>
 </head>
 <body>
 <main id="cd-main-content">
 	<section id="cd-intro">
-		<h1>Full Page Intro &amp; Navigation</h1>
+		<h1>AML</h1>
 
 		<header class="cd-header">
 			<div id="cd-logo"><a href="#0"><img src="img/cd-logo.svg" alt="Logo"></a></div>
@@ -29,9 +29,9 @@
 
 <nav id="main-nav">
 	<ul>
-		<li><a href="#0"><span>Tour</span></a></li>
+		<li><a href="#0"><span>Products</span></a></li>
 		<li><a href="#0"><span>Pricing</span></a></li>
-		<li><a href="#0"><span>Labs</span></a></li>
+		<!--<li><a href="#0"><span>Labs</span></a></li>-->
 		<li><a href="#0"><span>About</span></a></li>
 		<li><a href="#0"><span>Contact us</span></a></li>
 	</ul>
