using background blend mode simplifies creating a readable title

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 </head>
 <body>
 <main id="cd-main-content">
+	//<img id="Bckgrnd" src ="../img/hersHisEdit8_19_19.jpg">;
 	<section id="cd-intro">
 		<h1>AML</h1>
 
